--- a/index.html
+++ b/index.html
@@ -38,3 +38,44 @@
 </html>
 </body>
 </html>
+ 37 changes: 37 additions & 0 deletions37  
+style.css
+Original file line number	Original file line	Diff line number	Diff line change
+@@ -0,0 +1,37 @@
+body {
+    background-color: #fff;
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1em;
+    margin: 0;
+  }
+
+  h1 {
+    color: hotpink;
+    font-size: 2em;
+    font-family: Georgia, "Times New Roman", Times, serif;
+    border-bottom: 10px dotted purple;
+  }
+
+  h2 {
+    font-size: 1.5em;
+  }
+
+  .job-title {
+    color: #999999;
+    font-weight: bold;
+  }
+
+  a:link,
+  a:visited {
+    color: #fb6542;
+  }
+
+  a:hover {
+    text-decoration: none;
+    color: green;
+  }
+  ul{
+    background-color: #eeeeee;
+    border: 5px solid purple;
+  }
